--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
  
   <nav class="navbar navbar-expand-lg navbar-light bg-light" >
     <div class="container-fluid" style="display:flex;justify-content: space-between;">
-      <a class="navbar-brand" href="#"><img src="/images/whole.png" alt="Brand Logo" style="height: 40px;"></a>
+      <a class="navbar-brand" href="#"><img src="images/whole.png" alt="Brand Logo" style="height: 40px;"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -166,13 +166,13 @@
                     <input type="password" name="password" placeholder="Password"  style=" width: 80%;"><br>
                     <input type="password" name="password" placeholder="Confirm Password"  style=" width: 80%;"><br>
                     <button id="submit">Create Account</button>
-                    <button id="alter"><img src="/images/Group 3 (1).png" alt="facebook"></button>
-                    <button id="alter"><img src="/images/Group.png" alt="google"></button><br>
+                    <button id="alter"><img src="images/Group 3 (1).png" alt="facebook"></button>
+                    <button id="alter"><img src="images/Group.png" alt="google"></button><br>
                   </div>
                   <div class="col-md-5">
                     <h6>Already have an account?<a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"> Sign In</a></h6>
                     
-                    <img src="/images/atg_illustration.png" alt="signin">
+                    <img src="images/atg_illustration.png" alt="signin">
                     <h6 style="color: rgba(0, 0, 0, 1);">By signing up, you agree to our Terms & conditions, Privacy policy</h6>
                   </div>
                 </div>
@@ -187,7 +187,7 @@
   </nav>
   <div class="main">
     <div class="row" id="main">
-      <img src="/images/Rectangle 2.png" style="z-index: -1;">
+      <img src="images/Rectangle 2.png" style="z-index: -1;">
     </div>
     <div class="container">
       <div class="row">
@@ -226,21 +226,21 @@
         </div>
         <div class="col-md-2">
           <button class="btn btn-primary" id="sidebar" type="button" data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="/images/Vector (1).png" alt="group">
+          data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="images/Vector (1).png" alt="group">
           <i>Join Group</i></button>
         </div>
       </div>
 
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
           <div class="offcanvas-header">
-            <h5 id="offcanvasRightLabel"><img src="/images/outline-location_on-24px 2.png" alt="side">Noida, India</h5>
-            <p><img src="/images/baseline-edit-24px.png" alt="edit"></p>
+            <h5 id="offcanvasRightLabel"><img src="images/outline-location_on-24px 2.png" alt="side">Noida, India</h5>
+            <p><img src="images/baseline-edit-24px.png" alt="edit"></p>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             <hr>
           </div>
           <hr>
           <div class="offcanvas-body">
-            <h5 id="sideline"> <img src="/images/baseline-error_outline-24px.png" alt="">Your location will help us
+            <h5 id="sideline"> <img src="images/baseline-error_outline-24px.png" alt="">Your location will help us
               serve better and extend a personalised experience.</h5>
           </div>
         </div>
@@ -248,16 +248,16 @@
 
       <div class="row">
         <div class="card">
-          <img src="/images/Rectangle 5 (2).png" class="card-img-top" alt="...">
+          <img src="images/Rectangle 5 (2).png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">✍️ Article</h5>
             <p class="card-text" id="p1">What if famous brands had regular fonts? Meet RegulaBrands! <img
-                src="/images/Group 3.png" id="dots" alt="dots"></p>
+                src="images/Group 3.png" id="dots" alt="dots"></p>
             <p class="card-text" id="p2">I’ve worked in UX for the better part of a decade. From now on, I plan to rei…
             </p>
             <div id="person">
-              <p><img src="/images/Rectangle 3.png" alt=""> Sarthak Kamra</p>
-              <p><img src="/images/visibility_24px_outlined.svg" alt="">1.4k Views <img src="/images/Group 2.png"
+              <p><img src="images/Rectangle 3.png" alt=""> Sarthak Kamra</p>
+              <p><img src="images/visibility_24px_outlined.svg" alt="">1.4k Views <img src="images/Group 2.png"
                   alt=""> </p>
             </div>
           </div>
@@ -265,16 +265,16 @@
       </div>
       <div class="row">
         <div class="card">
-          <img src="/images/Rectangle 5 (1).png" class="card-img-top" alt="...">
+          <img src="images/Rectangle 5 (1).png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">🔬️ Education</h5>
             <p class="card-text" id="p1">Tax Benefits for Investment under National Pension Scheme launched by
-              Government <img src="/images/Group 3.png" id="dots" alt="dots"></p>
+              Government <img src="images/Group 3.png" id="dots" alt="dots"></p>
             <p class="card-text" id="p2">I’ve worked in UX for the better part of a decade. From now on, I plan to rei…
             </p>
             <div id="person">
-              <p><img src="/images/Rectangle 3 (2).png" alt=""> Sarah West</p>
-              <p><img src="/images/visibility_24px_outlined.svg" alt="">1.4k Views <img src="/images/Group 2.png"
+              <p><img src="images/Rectangle 3 (2).png" alt=""> Sarah West</p>
+              <p><img src="images/visibility_24px_outlined.svg" alt="">1.4k Views <img src="images/Group 2.png"
                   alt=""> </p>
             </div>
           </div>
@@ -282,20 +282,20 @@
       </div>
       <div class="row">
         <div class="card">
-          <img src="/images/Rectangle 5.png" class="card-img-top" alt="...">
+          <img src="images/Rectangle 5.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">🗓️ Meetup</h5>
             <p class="card-text" id="p1">Finance & Investment Elite Social Mixer @Lujiazui <img
-                src="/images/Group 3.png" id="dots" alt="dots"></p>
+                src="images/Group 3.png" id="dots" alt="dots"></p>
            <div class="loc">
-            <p class="card-text"><img src="/images/baseline-today-24px.png" alt=""> Fri, 12 Oct, 2018</p>
-            <p class="card-text"><img src="/images/outline-location_on-24px 2.png" alt="">  Ahmedabad, India</p>
+            <p class="card-text"><img src="images/baseline-today-24px.png" alt=""> Fri, 12 Oct, 2018</p>
+            <p class="card-text"><img src="images/outline-location_on-24px 2.png" alt="">  Ahmedabad, India</p>
            </div>
             
             <div class="visit"> Visit website</div>
             <div id="person">
-              <p><img src="/images/Rectangle 3 (3).png" alt=""> Ronal Jones</p>
-              <p><img src="/images/visibility_24px_outlined.svg" alt="">1.4k Views <img src="/images/Group 2.png"
+              <p><img src="images/Rectangle 3 (3).png" alt=""> Ronal Jones</p>
+              <p><img src="images/visibility_24px_outlined.svg" alt="">1.4k Views <img src="images/Group 2.png"
                   alt=""> </p>
             </div>
           </div>
@@ -305,16 +305,16 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">💼️ Job</h5>
-            <p class="card-text" id="p1">Software Developer <img src="/images/Group 3.png" id="dots" alt="dots"></p>
+            <p class="card-text" id="p1">Software Developer <img src="images/Group 3.png" id="dots" alt="dots"></p>
             <div class="loc">
-              <p class="card-text"><img src="/images/outline-work_outline-24px.png" alt=""> Innovaccer Analytics Private
+              <p class="card-text"><img src="images/outline-work_outline-24px.png" alt=""> Innovaccer Analytics Private
                 Ltd.</p>
-              <p class="card-text"><img src="/images/outline-location_on-24px 2.png" alt="">  Noida, India</p>
+              <p class="card-text"><img src="images/outline-location_on-24px 2.png" alt="">  Noida, India</p>
             </div>
             <div class="apply"> Apply on Timesjobs</div>
             <div id="person">
-              <p><img src="/images/Rectangle 3 (4).png" alt=""> Joseph Gray</p>
-              <p><img src="/images/visibility_24px_outlined.svg" alt="">1.4k Views <img src="/images/Group 2.png"
+              <p><img src="images/Rectangle 3 (4).png" alt=""> Joseph Gray</p>
+              <p><img src="images/visibility_24px_outlined.svg" alt="">1.4k Views <img src="images/Group 2.png"
                   alt=""> </p>
             </div>
           </div>
